# homes-map

./: .gitignore  CONTRIBUTING.md  README.md  package.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
HOMES-MAP-HS/: .gitignore  README.md  homes-map-hs.cabal
HOMES-MAP-HS/.github/workflows/: ci.yml
HOMES-MAP-HS/app/: Main.hs  UI.hs
HOMES-MAP-HS/frontend/: app.js  index.html  styles.css
HOMES-MAP-HS/src/HomesMap/Api/: Server.hs
HOMES-MAP-HS/src/HomesMap/Domain/: FlowRates.hs  SampleData.hs  Types.hs
HOMES-MAP-HS/src/HomesMap/UI/: App.hs
HOMES-MAP-HS/test/: Spec.hs
docs/: domain-model.md
