cabal-version:      3.0
name:               homes-map-hs
version:            0.1.0.0
synopsis:           Simplify tenant, landlord, and bank interactions around properties
description:        Haskell implementation of homes-map using stocks, flows, and flow rates.
license:            MIT
author:             fromSA
maintainer:         fromsa@example.com
build-type:         Simple
extra-doc-files:    README.md

common common-options
  default-language: Haskell2010
  ghc-options:      -Wall -Wcompat -Wincomplete-uni-patterns -Wincomplete-record-updates
  build-depends:
      base >=4.14 && <4.20

library
  import:           common-options
  hs-source-dirs:   src
  exposed-modules:
      HomesMap.Domain.Types
      HomesMap.Domain.FlowRates
      HomesMap.Domain.SampleData
      HomesMap.Api.Server
      HomesMap.UI.App
  other-modules:
      Paths_homes_map_hs
  build-depends:
      aeson >=2.0 && <2.3,
      bytestring >=0.10 && <0.13,
      containers >=0.6 && <0.8,
      directory >=1.3 && <1.4,
      filepath >=1.4 && <1.6,
      http-client >=0.7 && <0.8,
      servant >=0.19 && <0.21,
      servant-server >=0.19 && <0.21,
      text >=1.2 && <2.2,
      threepenny-gui >=0.9 && <0.10,
      time >=1.9 && <1.15,
      wai >=3.2 && <3.3,
      warp >=3.3 && <3.5

executable homes-map-hs
  import:           common-options
  hs-source-dirs:   app
  main-is:          Main.hs
  build-depends:
      aeson >=2.0 && <2.3,
      homes-map-hs,
      text >=1.2 && <2.2

executable homes-map-hs-ui
  import:           common-options
  hs-source-dirs:   app
  main-is:          UI.hs
  build-depends:
      homes-map-hs,
      threepenny-gui >=0.9 && <0.10


test-suite homes-map-hs-test
  import:           common-options
  type:             exitcode-stdio-1.0
  hs-source-dirs:   test
  main-is:          Spec.hs
  build-depends:
      aeson >=2.0 && <2.3,
      homes-map-hs,
      hspec >=2.8 && <2.12,
      text >=1.2 && <2.2,
      time >=1.9 && <1.15
